# AdventOfCode

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.rust.json
2019/1/: 1.go  1_test.go  main.go
2019/10/: asteroids.py  asteroids_test.py
2019/11/intcode/: Cargo.toml
2019/12/n_body_problem/: Cargo.toml
2019/13/care_package/: Cargo.toml
2019/2/: intcode.go  intcode_test.go
2019/3/: crossed_wires.go  crossed_wires_test.go  input.txt
2019/4/: password.go  password_test.go
2019/5/: intcode.go  intcode_test.go
2019/6/: orbits_test.py
2019/7/: day7_test.py  intcode_test.py
2019/8/: pixels.py
2019/9/: day9.py  intcode.py  intcode_test.py
2020/1/expense_report/: Cargo.toml
2020/10/adapter/: Cargo.toml
2020/11/seating/: Cargo.toml
2020/12/rain/: Cargo.toml
2020/13/shuttles/: Cargo.toml
2020/14/docking/: Cargo.toml
2020/15/memory/: Cargo.toml
2020/16/ticket/: Cargo.toml
2020/17/conway/: Cargo.toml
2020/18/operation/: Cargo.toml
2022/: AdventOfCode.sln
2022/Day1/: Program.cs  input.txt
2022/Day10/: main.go
2022/Day11/: main.go
2022/Day12/: main.go
2022/Day13/: main.go
2022/Day14/: main.go
2022/Day15/: main.go
2022/Day16/: main.go
2022/Day17/: main.go
2022/Day18/: main.go
2022/Day19/: main.go
2022/Day2/: Program.cs
2022/Day20/: main.go
2022/Day21/: main.go
2022/Day22/: go.mod  main.go
2022/Day23/: main.go
2022/Day24/: go.mod  main.go
2022/Day3/: main.go
2022/Day4/: main.go
2022/Day5/: main.go
2022/Day6/: main.go
2022/Day7/: main.go
2022/Day8/: main.go
2022/Day9/: main.go
(+155 files in other folders)
