[workspace]
    resolver = "2"

members = [
    "2019/11/intcode",
    "2019/12/n_body_problem",
    "2019/13/care_package",
    "2020/1/expense_report",
    "2020/2/passwords",
    "2020/3/trees",
    "2020/4/passport",
    "2020/5/boarding_passes",
    "2020/6/questionnaire",
    "2020/7/luggage",
    "2020/8/handheld",
    "2020/9/encoding",
    "2020/10/adapter",
    "2020/11/seating",
    "2020/12/rain",
    "2020/13/shuttles",
    "2020/14/docking",
    "2020/15/memory",
    "2020/16/ticket",
    "2020/17/conway",
    "2020/18/operation",
    "2020/19/messages",
    "2020/20/jigsaw",
    "2020/21/allergens",
    "2020/22/combat",
    "2020/23/cups",
    "2020/24/lobby",
    "2020/25/combo",
    "2021/1/count_increases",
    "2021/2/navigation",
    "2021/3/diagnostics",
    "2021/4/bingo",
    "2021/5/hydrothermal-venture",
    "2021/6/lanternfish",
    "2021/7/crabs",
    "2021/8/seven-segment",
    "2021/9/smoke_basin",
    "2021/10/syntax",
    "2021/11/dumbo_octopuses",
    "2021/12/passage-pathing",
    "2021/13/transparent-origami",
    "2021/14/extended-polymerization",
    "2021/15/chiton",
    "2021/16/packet-decoder",
    "2021/17/trick-shot",
    "2021/18/snailfish",
    "2021/19/beacon_scanner",
    "2021/20/trench_map",
    "2021/21/dirac_dice",
    "2023/1/calibration",
    "2023/2/cube_conundrum",
    "2023/3/gear_ratios",
]